--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,32 @@
-/*style.css*/
+body {
+	text-align: center;
+	background-color: black;
+	color: white;
+	font-family: Verdana;
+}
+
+h1 {
+	font-weight: normal;
+	font-size: 50px;
+}
+
+a {
+	color: aquamarine;
+	font-size: 16px;
+}
+
+h2 {
+	font-weight: 300;
+	font-size: 42px;
+}
+
+p {
+	font-size: 21px;
+	color: gray;
+}
+
+footer {
+	text-align: right;
+	color: gray;
+}
+
